syntax = "proto3";

package users;

option go_package = "api/users";

service Users {
    rpc GetMe(GetMeRequest) returns (GetMeResponse);
    rpc UpdateMe(UpdateMeRequest) returns (UpdateMeResponse);
}

message GetMeRequest {
    string token = 1;
}

message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    bool is_verified = 4;
    bool is_admin = 5;
}

message GetMeResponse {
    User user = 1;
}

message UpdateMeRequest {
    string token = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string new_password = 5;
}

message UpdateMeResponse {
    User user = 1;
}
